# wayclip

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  api.Cargo.toml
.github/workflows/: api.yml  deploy.yml  docs.yml
.sqlx/: query-33e6ab17f10ec01072d493812a2dbb69b4cbeda5d75894c13040e6b76e499bee.json  query-4aa028ce5c5b98cc7fa478bbe1109824feb3dd715db725f173be7b97563d9736.json  query-84735f7b717c2fdca80700cd100b56529f277e3591633cfc0ce04bdf3cad0515.json  query-b6ed24bcb1920e20cf511242b14b4f280026a1343708c5499ae3825552625fa7.json
wayclip-daemon/: Cargo.toml
wayclip-daemon/src/: main.rs
wayclip-gui/: bun.lockb  package.json  vite.config.ts
wayclip-gui/src/: App.tsx
wayclip-gui/src-tauri/: Cargo.toml  tauri.conf.json
wayclip-gui/src-tauri/src/: lib.rs
wayclip-shared/: Cargo.toml
wayclip_api/: .env.template  Cargo.toml  Dockerfile  docker-compose.yml
wayclip_api/assets/: report.html
wayclip_api/migrations/: 20250820115254_setup.up.sql  20250824061828_New_Subscription.down.sql  20250824061828_New_Subscription.up.sql  20250824072320_Banned_Users.up.sql
wayclip_api/src/: auth_handler.rs  clip_handler.rs  db.rs  jwt.rs  main.rs  middleware.rs  models.rs  settings.rs  storage.rs
wayclip_cli/: Cargo.toml
wayclip_cli/assets/: success.html
wayclip_cli/src/: auth.rs  list.rs  main.rs  manage.rs
wayclip_core/: Cargo.toml
wayclip_core/assets/: wayclip-daemon.service.template
wayclip_core/src/: api.rs  control.rs  lib.rs  logging.rs  models.rs  ring.rs  settings.rs
wayclip_daemon/: Cargo.toml
wayclip_daemon/src/: main.rs
wayclip_docs/: Dockerfile  README.md  bun.lockb  docker-compose.yml  mdx-components.tsx  next.config.mjs  package.json
wayclip_docs/app/: global.css  layout.tsx
wayclip_docs/app/(home)/: layout.tsx  page.tsx
wayclip_docs/app/docs/: layout.tsx
wayclip_docs/app/docs/[[...slug]]/: page.tsx
wayclip_docs/app/fd/search/: route.ts
wayclip_docs/components/layout/: page.tsx
wayclip_docs/components/ui/: button.tsx  shadcn-button.tsx
wayclip_docs/content/docs/: config.mdx  index.mdx  selfhosting.mdx
wayclip_docs/lib/: layout.shared.tsx
wayclip_gui/: ;  bun.lockb  index.html  package.json  start.sh  tsconfig.json  vite.config.ts
wayclip_gui/src/: main.tsx  vite-env.d.ts
wayclip_gui/src-tauri/: Cargo.toml  tauri.conf.json
wayclip_gui/src-tauri/capabilities/: default.json
wayclip_gui/src-tauri/src/: auth.rs  commands.rs  lib.rs  main.rs  types.rs
wayclip_gui/src/components/: clip-preview.tsx  info-card.tsx  setting-item.tsx  settings-item.tsx  sidebar-link.tsx  sidebar.tsx  test.tsx  toaster.tsx  tooltip.tsx
wayclip_gui/src/components/animate-ui/radix/: dropdown-menu.tsx
wayclip_gui/src/components/ui/: dropdown-menu.tsx  pagination.tsx
wayclip_gui/src/hooks/: debounce.ts  lazy.ts  sidebar.ts
wayclip_gui/src/layouts/: main-layout.tsx
wayclip_gui/src/lib/: config.ts  lib.ts  routes.tsx  types.ts
wayclip_gui/src/pages/: all-clips.tsx  editor.tsx  home.tsx  liked-clips.tsx  notifications.tsx  settings.tsx
wayclip_gui/src/styles/: globals.css
wayclip_shared/: Cargo.toml
wayclip_shared/src/: lib.rs  logging.rs
wayclip_trigger/: Cargo.toml  trigger_launcher.sh
wayclip_trigger/src/: main.rs
