[package]
name = "wayclip_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web-lab = "0.18"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.2"
url = "2.2"
dotenvy = "0.15"
futures-util = "0.3"
env_logger = "0.11.8"
wayclip_core = { path = "../wayclip_core" }
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
uuid = { version = "1.18.0", features = ["serde"] }
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing-actix-web = "0.7.19"
