[package]
name = "wayclip_core"
version = "0.1.0"
authors = ["konyogony"]
edition = "2021"

[[bin]]
name = "trigger"
path = "src/bin/trigger.rs"

[dependencies]
daemonize = "0.5.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.40", features = ["serde"] }
ashpd = { version = "0.11.0", features = ["pipewire", "wayland", "tracing"] }
wayland-client = { version = "0.31.8" }
enumflags2 = "0.7.11"
subprocess = "0.2"
libc = "0.2.171"
gstreamer = "0.23.5"
xcap = "0.4.1"
gstreamer-app = "0.23.5"
futures = "0.3.31"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strip-ansi-escapes = "0.2.1"
once_cell = "1.21.3"
rodio = "0.21.1"
mp4 = "0.14.0"
anyhow = "1.0.99"
ffmpeg-next = "7.1.0"
image = "0.25.6"
base64 = "0.22.1"
reqwest = { version = "0.12.23", features = ["json"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
uuid = { version = "1.18.0", features = ["serde"] }
nix = { version = "0.30.1", features = ["signal"] }
colored = "3.0.0"
