[package]
name = "wayclip_daemon"
version = "0.1.0"
authors = ["konyogony"]
edition = "2021"

[dependencies]
wayclip_shared = { path = "../wayclip_shared" }
daemonize = "0.5.0"
tokio = { version = "1", features = ["full"] }
tokio-uds = "0.2.7"
device_query = "3.0.1"
chrono = "0.4.40"
anyhow = "1.0.97"
pipewire = "0.8.0"
portal-screencast = "0.1.0"
ffmpeg-next = "7.1.0"
zbus = { version = "2.3.2" }
xdg-portal = "0.2.0"
pipewire-sys = "0.8.0"
