[package]
name = "wayclip_daemon"
version = "0.1.0"
authors = ["konyogony"]
edition = "2021"

[dependencies]
wayclip_shared = { path = "../wayclip_shared" }
daemonize = "0.5.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.40"
ashpd = { version = "0.11.0", features = ["pipewire", "wayland", "tracing"] }
wayland-client = { version = "0.31.8" }
enumflags2 = "0.7.11"
subprocess = "0.2"
libc = "0.2.171"
gstreamer = "0.23.5"
xcap = "0.4.1"
gstreamer-app = "0.23.5"
futures = "0.3.31"
