[package]
name = "wayclip_gui"
version = "0.1.0"
authors = ["konyogony"]
edition = "2021"


[lib]
name = "gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.44.2"
wayclip_shared = { path = "../../wayclip_shared" }
env = "1.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
mp4 = "0.14.0"
dirs = "6.0.0"
